--- a/CoreDataCoursera/CoreDataCoursera/Base.lproj/Main.storyboard
+++ b/CoreDataCoursera/CoreDataCoursera/Base.lproj/Main.storyboard
@@ -18,50 +18,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rdQ-YQ-qlp">
-                                <rect key="frame" x="16" y="20" width="168" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ft8-MU-riU">
-                                <rect key="frame" x="16" y="58" width="168" height="30"/>
-                                <state key="normal" title="Add chore"/>
-                                <connections>
-                                    <action selector="choreTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dtI-hL-pSa"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9GF-KV-XfJ">
-                                <rect key="frame" x="16" y="495" width="343" height="152"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="50" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQM-49-3ib">
+                                <rect key="frame" x="16" y="517" width="343" height="130"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Amh-Tz-N8S">
+                                <rect key="frame" x="16" y="20" width="169" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="zlR-ac-F6e"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Zq-cQ-CvT">
+                                <rect key="frame" x="16" y="58" width="169" height="30"/>
+                                <state key="normal" title="Add a Chore"/>
+                                <connections>
+                                    <action selector="addChoreTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0ed-bg-juI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Ft8-MU-riU" firstAttribute="top" secondItem="rdQ-YQ-qlp" secondAttribute="bottom" constant="8" id="BFL-GV-Ei4"/>
-                            <constraint firstItem="rdQ-YQ-qlp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="DJe-uc-waB"/>
-                            <constraint firstItem="rdQ-YQ-qlp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="KWw-LS-w6z"/>
-                            <constraint firstItem="Ft8-MU-riU" firstAttribute="centerX" secondItem="rdQ-YQ-qlp" secondAttribute="centerX" id="Vgn-Z6-CyT"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9GF-KV-XfJ" secondAttribute="trailing" constant="16" id="fZO-fe-tld"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9GF-KV-XfJ" secondAttribute="bottom" constant="20" id="g2X-Lb-9wD"/>
-                            <constraint firstItem="9GF-KV-XfJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="sCz-5P-2nb"/>
+                            <constraint firstItem="9Zq-cQ-CvT" firstAttribute="trailing" secondItem="Amh-Tz-N8S" secondAttribute="trailing" id="0HZ-Uv-heq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pQM-49-3ib" secondAttribute="bottom" constant="20" id="5vT-C0-yRa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pQM-49-3ib" secondAttribute="trailing" constant="16" id="IGm-Cv-xCG"/>
+                            <constraint firstItem="9Zq-cQ-CvT" firstAttribute="top" secondItem="Amh-Tz-N8S" secondAttribute="bottom" constant="8" id="V0r-GU-nX2"/>
+                            <constraint firstItem="pQM-49-3ib" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="dKf-GX-5Q9"/>
+                            <constraint firstItem="Amh-Tz-N8S" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="f3d-KE-YHh"/>
+                            <constraint firstItem="Amh-Tz-N8S" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="gSF-NL-bsb"/>
+                            <constraint firstItem="9Zq-cQ-CvT" firstAttribute="leading" secondItem="Amh-Tz-N8S" secondAttribute="leading" id="od9-1g-HLe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="choreField" destination="rdQ-YQ-qlp" id="YtB-0m-ubU"/>
+                        <outlet property="choreLogLabel" destination="pQM-49-3ib" id="04x-XQ-DhL"/>
+                        <outlet property="choreText" destination="Amh-Tz-N8S" id="jRY-he-OMS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="1Nz-Xy-SRe">
-                    <rect key="frame" x="0.0" y="0.0" width="46" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Button"/>
-                </button>
             </objects>
-            <point key="canvasLocation" x="133.59999999999999" y="133.5832083958021"/>
+            <point key="canvasLocation" x="132" y="132.68365817091455"/>
         </scene>
     </scenes>
 </document>
